test/expected/explain_b_ai.out
explain int (^b)()[]
            ^
13: error: block returning array; did you mean block returning pointer?
